--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "aws-sdk": "^2.5.1",
     "commander": "^2.9.0",
+    "lodash": "^4.15.0",
     "moment": "^2.14.1",
     "sqlite3": "^3.1.4"
   },
